[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anchor-lang = "0.19.0"
anchor-client = "0.19.0"
anchor-spl = "0.19.0"
shellexpand = "2.1"
farming = { path = "../../programs/farming", feature = ["no-entrypoint"]}
multisig = { path = "../../programs/multisig", feature = ["no-entrypoint"]}
staking = { path = "../../programs/staking", feature = ["no-entrypoint"]}
pooling = { path = "../../programs/pooling", feature = ["no-entrypoint"]}
vesting = { path = "../../programs/vesting", feature = ["no-entrypoint"]}
